# logfilegen

./: .gitignore  CMakeLists.txt  ChangeLog  Dockerfile  Makefile  Makefile.Haiku  Makefile.OpenBSD  Makefile.clang  Makefile.clang.macarm  Makefile.static  NEWS  README.md  TODO  cycle.cpp  cycle.h  libretta_pairfile.cpp  libretta_pairfile.h  logrot.cpp  logrot.h  macro.cpp  macro.h  main.cpp  pairfile.cpp  pairfile.h  params.cpp  params.h  tpl.cpp  tpl.h  utl.cpp  utl.h  vars.cpp  vars.h
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: MacARMBuild.yml  benchmark.yaml  cmake.yml  codeql.yml  cross-build.yml  docker.yml  release.yml  release_cmake.yml  tests.yml  xbuild-new.yml  xbuild.yml
benchmark/: README.md
benchmark/aws/: README.md  backend.tf_  main.tf  outputs.tf  providers.tf  variables.auto.tfvars  variables.tf  versions.tf
benchmark/aws/modules/vm/: aws-ami.tf  aws-ebs.tf  aws-ec2.tf  aws-iam.tf  aws-vpc.tf  locals.tf  outputs.tf
benchmark/aws/modules/vm/files/: 01-volume.sh  02-node.sh  03-logfilegen.sh  04-benchmark.sh  05-docker.sh
docs/: config.md  index.md  inst.md  metrics.md  templates.md
templates/: example-nginx-test.tp
